@@ -1,7 +1,9 @@
 package com.motogear.dropshopback.shop.catalog.service;
 
+import com.motogear.dropshopback.shop.catalog.components.ProductMapper;
 import com.motogear.dropshopback.shop.catalog.domain.BestProduct;
 import com.motogear.dropshopback.shop.catalog.domain.Product;
+import com.motogear.dropshopback.shop.catalog.dto.ProductClientResponse;
 import com.motogear.dropshopback.shop.catalog.repository.BestProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -9,20 +11,24 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BestProductService {
     private final BestProductRepository bestProductRepository;
     private final ProductService productService;
+    private final ProductMapper productMapper;
 
     @Transactional
-    public List<Product> getBestProduct() {
-        var bestProducts = bestProductRepository.findAll();
-        return bestProducts.stream()
+    public List<ProductClientResponse> getBestProduct() {
+        List<BestProduct> bestProducts = bestProductRepository.findAll();
+        List<Product> products = bestProducts.stream()
                 .map(BestProduct::getProduct)
-                .toList();
+                .collect(Collectors.toList());
+        return productMapper.toClientResponseList(products);
     }
+
     @Transactional
     public Long saveBestProduct(long id) {
         var bestProduct = new BestProduct();
